--- a/styles/style.css
+++ b/styles/style.css
@@ -80,6 +80,12 @@ a {
   background-color: var(--secondary-bg-color);
 }
 
+.heading {
+  display: flex;
+  align-items: center;
+  gap: 2.5rem;
+}
+
 .block__title {
   font-weight: bold;
   display: inline-block;
@@ -189,8 +195,13 @@ a {
   width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 5.5rem;
+  padding: 6.25rem;
+}
 
-  padding: 1.75rem 6.25rem;
+.service__p,
+.cases__p {
+  width: 37rem;
 }
 
 .service__container {
@@ -214,6 +225,10 @@ a {
   box-shadow: 0px 5px var(--primary-bg-color);
 }
 
+.service__card--bg1 {
+  background-color: var(--primary-bg-color);
+}
+
 .service__card--bg2 {
   background-color: var(--secondary-bg-color);
 }
@@ -229,6 +244,13 @@ a {
   justify-content: space-between;
 }
 
+.service__title {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.25px;
+}
+
 .service__button {
   display: flex;
   align-items: center;
@@ -238,27 +260,81 @@ a {
 .service__link {
   height: 2.5rem;
   width: 2.5rem;
-
   border-radius: 50%;
-
-  background-color: var(--primary-color);
 }
 
 .service__link img {
   height: 100%;
   width: 100%;
-
   transform: rotateZ(135deg);
 }
 
-.service__title {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 0.75px;
+.service__click:hover {
+  text-decoration: underline;
+}
+
+.service__click--c3 {
+  color: var(--accent-text-color);
 }
 
 .service__logo {
   height: 10.625rem;
   width: 13.125rem;
+}
+
+.service__logo img {
+  height: 100%;
+  width: 100%;
+}
+
+.service__contact {
+  width: 100%;
+  height: 21.75rem;
+
+  display: flex;
+  justify-content: space-between;
+
+  background-color: var(--accent-bg-color);
+  padding: 3.75rem;
+  border-radius: 45px;
+}
+
+.service__text {
+  width: 31.25rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.service__text a {
+  width: 18rem;
+  background-color: var(--primary-bg-color);
+  color: white;
+}
+
+.service__h3 {
+  font-weight: bold;
+}
+
+.service__image {
+  transform: translate(-100px, -90px);
+}
+
+/* USE CASES SECTION */
+
+.cases {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5.5rem;
+  padding: 6.25rem;
+}
+
+.cases__container {
+  height: 20.375rem;
+  width: 100%;
+
+  background-color: var(--primary-bg-color);
 }
