--- a/styles/style.css
+++ b/styles/style.css
@@ -541,10 +541,53 @@ a {
 .blog__profile {
   height: 6.75rem;
   width: 6.75rem;
-
+  position: relative;
   margin-right: 1.25rem;
-  background-color: red;
+
+  border-radius: 50%;
+  box-shadow: 0px 0px 15px 10px var(--primary-bg-color);
+
+  background-image: url("../assets/images/profile.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+/* 
+.blog__profile:before {
+  height: 100%;
+  width: 100%;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(45%, -5%) rotateZ(-40deg);
+  border-radius: 50%;
+  border: 2px solid black;
+  filter: blur(5px) brightness(0.9);
+}
+
+.blog__profile:after {
+  height: 100%;
+  width: 50%;
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  transform: translate(-45%, -5%) rotateZ(40deg);
+
+  border-radius: 50%;
+  border: 2px solid black;
+  background-color: red;
+} */
+
+/* .blog__profile:after,
+.blog__profile:before {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: url("../assets/images/profile.jpg");
+} */
 
 .blog__content {
   height: 100%;
