--- a/styles/style.css
+++ b/styles/style.css
@@ -510,14 +510,22 @@ a {
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 
   gap: 5rem;
   padding: 6.25rem;
 }
 
+.blog__team {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3.5rem;
+}
+
 .blog__card {
-  height: 20.75rem;
-  width: 24.125rem;
+  height: 22.75rem;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
@@ -545,9 +553,8 @@ a {
   margin-right: 1.25rem;
 
   border-radius: 50%;
-  box-shadow: 0px 0px 15px 10px var(--primary-bg-color);
+  box-shadow: 0px 0px 10px 10px var(--primary-bg-color);
 
-  background-image: url("../assets/images/profile.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
