--- a/styles/style.css
+++ b/styles/style.css
@@ -185,14 +185,11 @@ a {
 
 .about__item {
   font-size: 1rem;
+  text-decoration: underline;
 }
 
 .about__item:hover a {
   background-color: var(--secondary-text-color);
-}
-
-.about__item--active {
-  text-decoration: underline;
 }
 
 .about__header {
@@ -1011,7 +1008,7 @@ h4 {
 
 .contact-footer__rights {
   height: 100%;
-  width: 30%;
+  width: 60%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -1030,4 +1027,10 @@ h4 {
   cursor: pointer;
   font-size: 1rem;
   font-weight: 100;
+
+  transition: all 300ms ease-in-out;
+}
+
+.contact-footer__rights a:hover {
+  color: var(--secondary-bg-color);
 }
