--- a/styles/style.css
+++ b/styles/style.css
@@ -232,13 +232,16 @@ a {
 
 .about-menu__nav {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: start;
+  flex-direction: column;
+
+  position: relative;
 }
 
-.about-menu__items {
-  position: relative;
+.about-menu__heading {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-between;
 }
 
 .about-menu__icon {
@@ -246,7 +249,10 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: end;
   gap: 0.25rem;
+
+  cursor: pointer;
 }
 
 .about-menu__icon span {
@@ -255,14 +261,59 @@ a {
 
   border-radius: 2px;
   background-color: var(--primary-bg-color);
+  transition: all 300ms ease-in;
+}
+
+.about-menu__icon.open span:first-child {
+  transform: translateY(8px) rotateZ(225deg);
+}
+
+.about-menu__icon.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.about-menu__icon.open span:last-child {
+  transform: translateY(-8px) rotateZ(-225deg);
 }
 
 .about-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+
   position: absolute;
+  left: 0;
   right: 0;
-  width: 20vw;
-  background-color: red;
-  /* display: none; */
+  top: 3rem;
+
+  background-color: rgb(77, 77, 77);
+  padding: 1rem 2rem;
+
+  transition: all 300ms ease-in-out;
+}
+
+.about-menu__list.open {
+  opacity: 0;
+}
+.about-menu__item {
+  padding: 0.5rem;
+  cursor: pointer;
+
+  transition: all 300ms ease-in;
+}
+
+.about-menu__item:hover {
+  background-color: var(--primary-bg-color);
+  color: var(--primary-bg-color);
+}
+
+.about-menu__item a {
+  display: block;
+  color: white;
+}
+
+.about-menu__item a:hover {
+  transform: translateX(1.5rem);
 }
 
 /* SERVICES SECTION */
