--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
 
   font-family: "Space Grotesk", sans-serif;
+  font-size: 16px;
 }
 
 html {
@@ -37,23 +38,23 @@ p {
 }
 
 h1 {
-  font-size: 60px;
+  font-size: 3.75rem;
 }
 
 h2 {
-  font-size: 40px;
+  font-size: 2.5rem;
 }
 
 h3 {
-  font-size: 30px;
+  font-size: 1.875rem;
 }
 
 h4 {
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 p {
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 
 ul {
@@ -95,6 +96,7 @@ a {
 .block__title {
   font-weight: bold;
   display: inline-block;
+  text-wrap: nowrap;
   padding: 2px 4px;
   border: none;
   border-radius: 7px;
@@ -198,11 +200,15 @@ a {
 }
 
 .about__content {
-  width: 33.25rem;
+  width: 45%;
   display: flex;
   flex-direction: column;
 
   gap: 1.25rem;
+}
+
+.about__content--primary {
+  display: none;
 }
 
 .about__title {
@@ -226,6 +232,7 @@ a {
 .about__logos {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 /* ABOUT SECTION MENU */
@@ -288,16 +295,19 @@ a {
   position: absolute;
   left: 0;
   right: 0;
-  top: 3rem;
+  top: -30rem;
 
   background-color: rgb(77, 77, 77);
   padding: 1rem 2rem;
+  opacity: 0;
 
-  transition: all 300ms ease-in-out;
+  transition: opacity 300ms ease-in-out;
 }
 
 .about-menu__list.open {
-  opacity: 0;
+  top: 3rem;
+
+  opacity: 1;
 }
 .about-menu__item {
   padding: 0.5rem;
