--- a/styles/style.css
+++ b/styles/style.css
@@ -151,12 +151,12 @@ a {
 /* ABOUT SECTION */
 
 .about {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 2.5rem;
+  gap: 8.5rem;
   padding: 1.75rem 6.25rem;
 }
 
@@ -204,7 +204,7 @@ a {
   display: flex;
   flex-direction: column;
 
-  gap: 1.25rem;
+  gap: 3.25rem;
 }
 
 .about__content--primary {
